Added function to prompt user to enter name. Added readme file.

--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -22,7 +22,14 @@
     "#Importerar SpaCy \n",
     "import spacy\n",
     "#Ladda SpaCy modellen med engelska språkpaketet  \n",
-    "nlp = spacy.load(\"en_core_web_lg\")"
+    "nlp = spacy.load(\"en_core_web_lg\")\n",
+    "\n",
+    "#Funktion för att få användarens namn genom en prompt\n",
+    "def get_name (prompt):\n",
+    "    #Sparar värdet av användarens input i prompten\n",
+    "    user_input = input(prompt)\n",
+    "    #Returnerar ett Doc objekt av användarens inmatning \n",
+    "    return nlp(user_input)"
    ]
   }
  ],
