Added prompt to enter name again if it is not recognised by the bot.

--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-02-01T20:35:55.116157500Z",
-     "start_time": "2024-02-01T20:35:51.044068Z"
+     "end_time": "2024-02-01T20:49:42.184696800Z",
+     "start_time": "2024-02-01T20:49:20.121365500Z"
     }
    },
    "outputs": [
@@ -52,9 +52,8 @@
     "        if ent.label_ == \"PERSON\":\n",
     "            #Om entiteten/erna känns igen som namn så returneras ett trevligt meddelande \n",
     "            return f\"Hello {ent.text}. My name is Tom Riddle. How did you come by my app?\"\n",
-    "        #Denna biten fungerar inte som den ska just nu. \n",
-    "        #else: \n",
-    "            #return \"I don't recognize that as a name. I can tell when people are lying to me.\"\n",
+    "        #Om det inmatade värdet inte känns igen som ett namn skrivs sista meddelandet ut.\n",
+    "    get_name(prompt=\"I don't recognize that as a name. I can tell when people are lying to me. I will ask you again. What is your name?\")\n",
     "        \n",
     "def generate_response(user_input):\n",
     "    response = respond_name(user_input)\n",
